simconnect-sdk-derive/tests/04-invalid-values.stderr
error: Expected Str, found Int(LitInt { token: 123 })
 --> tests/04-invalid-values.rs:5:14
  |
5 | #[simconnect(period = 123, condition = "none")]
  |              ^^^^^^^^^^^^

error: Expected Str, found Int(LitInt { token: 123 })
 --> tests/04-invalid-values.rs:9:33
  |
9 | #[simconnect(period = "second", condition = 123)]
  |                                 ^^^^^^^^^^^^^^^

error: `period` must be one of ["once", "visual-frame", "sim-frame", "second"]
  --> tests/04-invalid-values.rs:13:14
   |
13 | #[simconnect(period = "X")]
   |              ^^^^^^^^^^^^

error: `condition` must be one of ["none", "changed"]
  --> tests/04-invalid-values.rs:17:33
   |
17 | #[simconnect(period = "second", condition = "X")]
   |                                 ^^^^^^^^^^^^^^^

error: Expected Int, found Str(LitStr { token: "X" })
  --> tests/04-invalid-values.rs:21:33
   |
21 | #[simconnect(period = "second", interval = "X")]
   |                                 ^^^^^^^^^^^^^^

error: Expected Int, found Float(LitFloat { token: 0.0 })
  --> tests/04-invalid-values.rs:25:33
   |
25 | #[simconnect(period = "second", interval = 0.0)]
   |                                 ^^^^^^^^^^^^^^

error: Field type must be one of ["f64", "bool"]
  --> tests/04-invalid-values.rs:31:5
   |
31 | /     #[simconnect(name = "PLANE LATITUDE", unit = "degrees")]
32 | |     pub lat: String,
   | |___________________^
